# mode

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  PROJECT_CONTEXT.md  PUBLISHING.md  README.md  install.sh  mode-wrapper.sh  mode-wrapper.zsh  quick-install.sh  uninstall.sh
docs/: ARCHITECTURE.md
src/: app.rs  event.rs  lib.rs  main.rs  ui.rs
src/features/: alias_manager.rs  bookmark_manager.rs  mod.rs  placeholder.rs  process_manager.rs  scanner.rs  usage_viewer.rs
src/menu/: items.rs  mod.rs  state.rs
src/ui_components/: input_dialog.rs  logo.rs  menu_view.rs  mod.rs  theme.rs
src/utils/: errors.rs  file_ops.rs  mod.rs  shell.rs
